@@ -28,6 +28,15 @@
 // include main configuration and functionality
 require_once dirname(__FILE__) . '/../src/bootstrap.php';
 
+// prevent cron from running twice at the same time
+// however if the cron has been running for 10 mins, we'll assume it died and run anyway
+$time = time();
+if(psm_get_conf('cron_running') == 1 && ($time - psm_get_conf('cron_running_time') < 600)) {
+   die('Cron is already running. Exiting.');
+}
+psm_update_conf('cron_running', 1);
+psm_update_conf('cron_running_time', $time);
+
 // get the active servers from database
 $servers = $db->select(
 	PSM_DB_PREFIX.'servers',
@@ -69,5 +78,7 @@ foreach ($servers as $server) {
 		array('server_id' => $server['server_id'])
 	);
 }
+
+psm_update_conf('cron_running', 0);
 
 ?>
